--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
-  "name": "cern-poc",
-  "version": "1.0.0",
-  "description": "A PoC two-page form using the Camunda, Express, React and Node.js stack",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "MIT"
+	"name": "cern-poc",
+	"version": "1.0.0",
+	"type": "module",
+	"description": "A PoC two-page form using the Camunda, Express, React and Node.js stack",
+	"main": "server.js",
+	"scripts": {
+		"server": "nodemon server.js"
+	},
+	"author": "",
+	"license": "MIT",
+	"dependencies": {
+		"axios": "^0.20.0",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"express-validator": "^6.6.1",
+		"multer": "^1.4.2"
+	}
 }
