--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
 		"react-dom": "^16.13.1",
 		"react-redux": "^7.2.1",
 		"react-scripts": "3.4.3",
-		"redux": "^4.0.5"
+		"redux": "^4.0.5",
+		"semantic-ui-css": "^2.4.1",
+		"semantic-ui-react": "^1.2.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
